# icmpy

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.hermes/plans/: 2025-06-17_010000-icmpy-scaffolding-tool.md
docs/: cli-tips.md  custom-templates.md  philosophy.md
src/icmpy/: __init__.py  builder.py  cli.py  harness.py  models.py  runner.py  scaffold.py  stages.py  template_catalog.py  tokens.py  validator.py
src/icmpy/templates/: builtins_manifest.json
src/icmpy/templates/_workspace_builder/: CONTEXT.md
src/icmpy/templates/api_design/: questionnaire.json
src/icmpy/templates/api_design/_config/: voice.md
src/icmpy/templates/api_design/stages/01_use_cases/: CONTEXT.md
src/icmpy/templates/api_design/stages/02_endpoint_list/: CONTEXT.md
src/icmpy/templates/api_design/stages/03_schemas/: CONTEXT.md
src/icmpy/templates/api_design/stages/04_examples/: CONTEXT.md
src/icmpy/templates/bug_runbook/: questionnaire.json
src/icmpy/templates/bug_runbook/_config/: voice.md
src/icmpy/templates/campaign_brief/: questionnaire.json
src/icmpy/templates/campaign_brief/_config/: voice.md
src/icmpy/templates/client_onboarding/: questionnaire.json
src/icmpy/templates/client_onboarding/_config/: voice.md
src/icmpy/templates/competitive_analysis/: questionnaire.json
src/icmpy/templates/competitive_analysis/_config/: voice.md
src/icmpy/templates/course_module/: questionnaire.json
src/icmpy/templates/course_module/_config/: voice.md
src/icmpy/templates/empty/: questionnaire.json
src/icmpy/templates/feature_spec/: questionnaire.json
src/icmpy/templates/feature_spec/_config/: voice.md
src/icmpy/templates/landing_page/: questionnaire.json
src/icmpy/templates/landing_page/_config/: voice.md
src/icmpy/templates/literature_review/: questionnaire.json
src/icmpy/templates/literature_review/_config/: voice.md
src/icmpy/templates/literature_review/output/: sources.md
src/icmpy/templates/long_form_essay/: questionnaire.json
src/icmpy/templates/long_form_essay/_config/: voice.md
src/icmpy/templates/script_to_animation/: questionnaire.json
src/icmpy/templates/script_to_animation/_config/: structure.md  voice.md
src/icmpy/templates/script_to_animation/stages/: tree.txt
src/icmpy/templates/weekly_report/: questionnaire.json
src/icmpy/templates/weekly_report/_config/: voice.md
tests/: conftest.py  test_builder.py  test_builder_validation.py  test_clear_stage.py  test_cli.py  test_cli_build_answers_file.py  test_cli_build_info.py  test_cli_build_subcommands.py  test_cli_build_table.py  test_cli_completion.py  test_cli_reset.py  test_cli_stage_list.py  test_cli_stage_run_next.py  test_cli_status.py  test_cli_validate.py  test_custom_templates.py  test_harness.py  test_infrastructure.py  test_models.py  test_runner.py  test_scaffold.py  test_stages.py  test_stages_next_pending.py  test_templates.py  test_templates_extras.py  test_templates_more.py  test_templates_software.py  test_tokens.py  test_validator.py
(+51 files in other folders)
