[project]
name = "icmpy"
version = "0.1.0"
description = "A scaffolding and orchestration tool for the Interpretable Context Methodology (ICM)."
readme = "README.md"
authors = [
    { name = "PattyC", email = "patrickcoffey91@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.6",
    "mypy>=1.0",
]

[project.scripts]
icmp = "icmpy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "src"
